--- a/srcs/styles/index.css
+++ b/srcs/styles/index.css
@@ -1,1 +1,10 @@
 @import 'tailwindcss';
+
+/* src/index.css */
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+.scroll-hidden {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
