fix lặt vặt + Thêm BuildPC

--- a/srcs/styles/index.css
+++ b/srcs/styles/index.css
@@ -9,6 +9,12 @@
   scrollbar-width: none; /* Firefox */
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 :root {
   /* Indigo */
   --color-brand-50: #eef2ff;
