--- a/srcs/styles/index.css
+++ b/srcs/styles/index.css
@@ -4,9 +4,10 @@
 .scroll-hidden::-webkit-scrollbar {
   display: none;
 }
+
 .scroll-hidden {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 html,
